# Proyecto-IS2

./: .coverage  .gitignore  README.md  coverage.xml  locustfile.py  pyproject.toml  sample.txt
.github/workflows/: python-app.yml
client/: package-lock.json  package.json
client/src/: App.jsx
client/src/api/: admin.js  auth.js  axios.js
client/src/assests/css/: HomePage.css  Navbar.css
client/src/components/: ConfirmModal.jsx  CutomSpinner.jsx  DocumentUpload.jsx  FormLogin.jsx  FormRegister.jsx  Navbar.jsx  QuestionForm.jsx
client/src/components/profile/: CardProfile.jsx  ModalUpdateProfile.jsx
client/src/context/: AdminContext.jsx  AuthContext.jsx
client/src/pages/: AdminDashboard.jsx  HomePage.jsx  LoginRegisterPage.jsx  NotFoundPage.jsx  ProfilePage.jsx
client/src/utils/: ProtectedRoute.jsx  PublicRoute.jsx
server/: main.py  pyproject.toml
server/adapters/: chromadb_adapter.py  firebase_adapter.py  mongodb_adapter.py  openai_adapter.py
server/api/: dependencies.py  routers.py
server/app/: configurations.py  main.py  usecases.py
server/core/: models.py  ports.py
server/helpers/: strategies.py  vectorize_document.py
server/media/: El poder de la gratidud Resumen.docx  Horario.xlsx  Saludame.txt
server/middlewares/: jwt.py
server/test/: _test.py
